// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberCard: index render component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NumberCard
    description="Network"
    iconClass="fa-exclamation-circle"
    mode="warning"
    number="HEALTH"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col-xs-4 text-center"
        >
          <i
            aria-hidden="true"
            className="fa fa-exclamation-circle fa-5x smd-pad-8"
          />
        </div>
        <div
          className="col-xs-8"
        >
          <div
            className="h2 text-right"
          >
            <Text
              ellipsize={true}
            >
              <strong>
                HEALTH
              </strong>
            </Text>
          </div>
          <div
            className="h4 text-right desc"
          >
            <Text
              ellipsize={true}
            >
              Network
            </Text>
          </div>
        </div>
      </div>,
      "className": "pt-card pt-dark pt-elevation-2 warning",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa fa-exclamation-circle fa-5x smd-pad-8"
            />
          </div>,
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <Text
                ellipsize={true}
              >
                <strong>
                  HEALTH
                </strong>
              </Text>
            </div>
            <div
              className="h4 text-right desc"
            >
              <Text
                ellipsize={true}
              >
                Network
              </Text>
            </div>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <i
              aria-hidden="true"
              className="fa fa-exclamation-circle fa-5x smd-pad-8"
            />,
            "className": "col-xs-4 text-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "className": "fa fa-exclamation-circle fa-5x smd-pad-8",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="h2 text-right"
              >
                <Text
                  ellipsize={true}
                >
                  <strong>
                    HEALTH
                  </strong>
                </Text>
              </div>,
              <div
                className="h4 text-right desc"
              >
                <Text
                  ellipsize={true}
                >
                  Network
                </Text>
              </div>,
            ],
            "className": "col-xs-8",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <strong>
                    HEALTH
                  </strong>
                </Text>,
                "className": "h2 text-right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <strong>
                    HEALTH
                  </strong>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "HEALTH",
                  },
                  "ref": null,
                  "rendered": "HEALTH",
                  "type": "strong",
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  Network
                </Text>,
                "className": "h4 text-right desc",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Network",
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": "Network",
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa fa-exclamation-circle fa-5x smd-pad-8"
            />
          </div>
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <Text
                ellipsize={true}
              >
                <strong>
                  HEALTH
                </strong>
              </Text>
            </div>
            <div
              className="h4 text-right desc"
            >
              <Text
                ellipsize={true}
              >
                Network
              </Text>
            </div>
          </div>
        </div>,
        "className": "pt-card pt-dark pt-elevation-2 warning",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-4 text-center"
            >
              <i
                aria-hidden="true"
                className="fa fa-exclamation-circle fa-5x smd-pad-8"
              />
            </div>,
            <div
              className="col-xs-8"
            >
              <div
                className="h2 text-right"
              >
                <Text
                  ellipsize={true}
                >
                  <strong>
                    HEALTH
                  </strong>
                </Text>
              </div>
              <div
                className="h4 text-right desc"
              >
                <Text
                  ellipsize={true}
                >
                  Network
                </Text>
              </div>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                aria-hidden="true"
                className="fa fa-exclamation-circle fa-5x smd-pad-8"
              />,
              "className": "col-xs-4 text-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa fa-exclamation-circle fa-5x smd-pad-8",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="h2 text-right"
                >
                  <Text
                    ellipsize={true}
                  >
                    <strong>
                      HEALTH
                    </strong>
                  </Text>
                </div>,
                <div
                  className="h4 text-right desc"
                >
                  <Text
                    ellipsize={true}
                  >
                    Network
                  </Text>
                </div>,
              ],
              "className": "col-xs-8",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Text
                    ellipsize={true}
                  >
                    <strong>
                      HEALTH
                    </strong>
                  </Text>,
                  "className": "h2 text-right",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <strong>
                      HEALTH
                    </strong>,
                    "ellipsize": true,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "HEALTH",
                    },
                    "ref": null,
                    "rendered": "HEALTH",
                    "type": "strong",
                  },
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Text
                    ellipsize={true}
                  >
                    Network
                  </Text>,
                  "className": "h4 text-right desc",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Network",
                    "ellipsize": true,
                  },
                  "ref": null,
                  "rendered": "Network",
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`NumberCard: index render component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NumberCard />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col-xs-4 text-center"
        >
          <i
            aria-hidden="true"
            className="fa undefined fa-5x smd-pad-8"
          />
        </div>
        <div
          className="col-xs-8"
        >
          <div
            className="h2 text-right"
          >
            <Text
              ellipsize={true}
            >
              <strong />
            </Text>
          </div>
          <div
            className="h4 text-right desc"
          >
            <Text
              ellipsize={true}
            />
          </div>
        </div>
      </div>,
      "className": "pt-card pt-dark pt-elevation-2 neutral",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa undefined fa-5x smd-pad-8"
            />
          </div>,
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <Text
                ellipsize={true}
              >
                <strong />
              </Text>
            </div>
            <div
              className="h4 text-right desc"
            >
              <Text
                ellipsize={true}
              />
            </div>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <i
              aria-hidden="true"
              className="fa undefined fa-5x smd-pad-8"
            />,
            "className": "col-xs-4 text-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "className": "fa undefined fa-5x smd-pad-8",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="h2 text-right"
              >
                <Text
                  ellipsize={true}
                >
                  <strong />
                </Text>
              </div>,
              <div
                className="h4 text-right desc"
              >
                <Text
                  ellipsize={true}
                />
              </div>,
            ],
            "className": "col-xs-8",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <strong />
                </Text>,
                "className": "h2 text-right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <strong />,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "strong",
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                />,
                "className": "h4 text-right desc",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": undefined,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa undefined fa-5x smd-pad-8"
            />
          </div>
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <Text
                ellipsize={true}
              >
                <strong />
              </Text>
            </div>
            <div
              className="h4 text-right desc"
            >
              <Text
                ellipsize={true}
              />
            </div>
          </div>
        </div>,
        "className": "pt-card pt-dark pt-elevation-2 neutral",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-4 text-center"
            >
              <i
                aria-hidden="true"
                className="fa undefined fa-5x smd-pad-8"
              />
            </div>,
            <div
              className="col-xs-8"
            >
              <div
                className="h2 text-right"
              >
                <Text
                  ellipsize={true}
                >
                  <strong />
                </Text>
              </div>
              <div
                className="h4 text-right desc"
              >
                <Text
                  ellipsize={true}
                />
              </div>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                aria-hidden="true"
                className="fa undefined fa-5x smd-pad-8"
              />,
              "className": "col-xs-4 text-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa undefined fa-5x smd-pad-8",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="h2 text-right"
                >
                  <Text
                    ellipsize={true}
                  >
                    <strong />
                  </Text>
                </div>,
                <div
                  className="h4 text-right desc"
                >
                  <Text
                    ellipsize={true}
                  />
                </div>,
              ],
              "className": "col-xs-8",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Text
                    ellipsize={true}
                  >
                    <strong />
                  </Text>,
                  "className": "h2 text-right",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <strong />,
                    "ellipsize": true,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "strong",
                  },
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Text
                    ellipsize={true}
                  />,
                  "className": "h4 text-right desc",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": undefined,
                    "ellipsize": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
